src/scripts/aks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openai
  labels:
    app: openai
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  - protocol: TCP
    port: 6000
    targetPort: 6000
    name: grpc
  selector:
    app: openai
